WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128496
[GTK] Fix modifiers on EventSenderProxy::keyDown
https://bugs.webkit.org/show_bug.cgi?id=128496
Summary
[GTK] Fix modifiers on EventSenderProxy::keyDown
Carlos Garnacho
Reported
2014-02-09 02:21:07 PST
On my patch in
bug #128171
, I went far too eagerly to check direct usages of wkModifiers, failing to realize that keyDown() was already transforming that to a GTK+ modifier mask at the beginning of the function, I'm attaching a patch that fixes it back, sorry about that...
Attachments
patch, fixes modifiers on keyDown
(1.45 KB, patch)
2014-02-09 02:23 PST
,
Carlos Garnacho
cgarcia
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
patch, fix indentation issues
(1.47 KB, patch)
2014-02-09 02:36 PST
,
Carlos Garnacho
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garnacho
Comment 1
2014-02-09 02:23:07 PST
Created
attachment 223621
[details]
patch, fixes modifiers on keyDown
WebKit Commit Bot
Comment 2
2014-02-09 02:25:25 PST
Attachment 223621
[details]
did not pass style-queue: ERROR: Tools/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] ERROR: Tools/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3
2014-02-09 02:26:00 PST
Comment on
attachment 223621
[details]
patch, fixes modifiers on keyDown Oops
Carlos Garcia Campos
Comment 4
2014-02-09 02:26:29 PST
Comment on
attachment 223621
[details]
patch, fixes modifiers on keyDown Oh, please fix the changelog.
Carlos Garnacho
Comment 5
2014-02-09 02:36:00 PST
Created
attachment 223622
[details]
patch, fix indentation issues
WebKit Commit Bot
Comment 6
2014-02-09 03:34:32 PST
Comment on
attachment 223622
[details]
patch, fix indentation issues Clearing flags on attachment: 223622 Committed
r163750
: <
http://trac.webkit.org/changeset/163750
>
WebKit Commit Bot
Comment 7
2014-02-09 03:34:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug