[GTK] Fix modifiers on EventSenderProxy::keyDown https://bugs.webkit.org/show_bug.cgi?id=128496

Patch by Carlos Garnacho <carlosg@gnome.org> on 2014-02-09
Reviewed by Carlos Garcia Campos.

* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::EventSenderProxy::keyDown): do not attempt to doubly transform modifiers
into GTK+ ones.

Canonical link: https://commits.webkit.org/146518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163750 268f45cc-cd09-0410-ab3c-d52691b4dbfc